[package]
name = "rslowloris"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
ctrlc = "3.2.3"
env_logger = "0.9.1"
log = "0.4.17"
rand = "0.8.5"
seahorse = "2.1.0"
spinners = "4.1.0"
