[package]
name = "rslowloris"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
byteorder = "1.4.3"
ctrlc = "3.2.3"
env_logger = "0.9.1"
log = "0.4.17"
rustls = { version = "0.20.7", features = ["dangerous_configuration"] }
seahorse = "2.1.0"
socks = "0.3.4"
spinners = "4.1.0"
tokio = { version = "1.22.0", features = ["full"] }
webpki = "0.22.0"
